Fix cancellation background color in dark mode

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -248,7 +248,7 @@ ul.departures {
 		background-color: $bg;
 
 		&.cancelled {
-			background-color: #ffe7d0;
+			background-color: $cancelled-bg-color;
 		}
 
 		a {
