--- a/sass/dark.scss
+++ b/sass/dark.scss
@@ -23,4 +23,6 @@ $suburban-bg: #2f6639;
 $subway-bg: #2045b0;
 $bus-bg: #7f3d7f;
 
+$cancelled-bg-color: #512f00;
+
 @import 'app.scss';
