--- a/sass/light.scss
+++ b/sass/light.scss
@@ -23,4 +23,6 @@ $suburban-bg: #aaffba;
 $subway-bg: #aac0ff;
 $bus-bg: #eeaaee;
 
+$cancelled-bg-color: #ffe7d0;
+
 @import 'app.scss';
